Refactored generally observable subscription
A lot of single-use observables should be subscribed to using pipes so that they complete after the first value.
I used to unsubscribe or not handle that at all. This commit does include handling this for all articles.

--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -47,7 +47,7 @@
         <!-- Items -->
         <div class="mb-5">
             <app-object-list    [articleType]="'item'" 
-            [createLink]="'/'+constants.spaPrefix+'/item/'+character.name+'/create'"
+            [createLink]="constants.getRoutePath(router, 'item-character-create', {character_name: character.name})"
             [heading]="'Items of Note'"
             [items]="character.items"></app-object-list>
         </div>
