--- a/src/app/components/articles/item-article/item-article.component.html
+++ b/src/app/components/articles/item-article/item-article.component.html
@@ -4,11 +4,11 @@
         <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
 
         <h1 class="text-center"> {{ item.name }} </h1>
-        <p
-        *ngIf="item.owner_details" 
-        class="text-center mb-5"> 
+        <p *ngIf="item.owner_details" class="text-center mb-5"> 
             Owned by: 
-            <a routerLink="{{constants.wikiUrlFrontendPrefix}}/character/{{item.owner_details.name}}">{{ item.owner_details.name }}</a>
+            <a routerLink="{{constants.getRoutePath(router, 'character', {name: item.owner_details.name})}}">
+                {{ item.owner_details.name }}
+            </a>
         </p>
 
         <!-- Image Gallery -->
@@ -29,10 +29,12 @@
 
         <app-delete-toggle [deleteMessage]="'Delete '+item.name+'?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
 
-        <a routerLink="{{constants.wikiUrlFrontendPrefix}}/item" class="btn btn-secondary mr-1">Back to Items</a>
-        <a 
-        *ngIf="item.owner_details"
-        routerLink="{{constants.wikiUrlFrontendPrefix}}/character/{{item.owner_details.name}}" class="btn btn-secondary">Back to {{item.owner_details.name}}</a>
+        <a routerLink="{{constants.getRoutePath(router, 'item-overview')}}" class="btn btn-secondary mr-1">Back to Items</a>
+        <a  *ngIf="item.owner_details"
+            routerLink="{{constants.getRoutePath(router, 'character', {name: item.owner_details.name})}}" 
+            class="btn btn-secondary">
+            Back to {{item.owner_details.name}}
+        </a>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
