--- a/src/app/components/articles/marker-update/marker-update.component.html
+++ b/src/app/components/articles/marker-update/marker-update.component.html
@@ -1,26 +1,23 @@
 <div class="main">
     <article class="mb-5" *ngIf="markerLocation; else loading">
+        <!-- Heading -->
         <div *ngIf="formState===constants.updateState && model; else createState">
             <app-edit-toggle [isInUpdateState]=true [link]="'..'"></app-edit-toggle>
 
-            <h2 class="text-center">
-                Updating Marker for {{model.location_details.name}} on {{model.map_details.name}}
-            </h2>
+            <h2 class="text-center"> Updating Marker for {{model.location_details.name}} on {{model.map_details.name}} </h2>
         </div>
 
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="'/location/'+markerLocation.parent_location_details.name+'/'+markerLocation.name"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'location', {parent_name: markerLocation.parent_location_details.name, name: markerLocation.name})"></app-edit-toggle>
 
-            <h2 class="text-center">
-                Adding a new Marker
-            </h2>
+            <h2 class="text-center"> Adding a new Marker </h2>
         </ng-template>
 
         <!-- Form -->
-        <form [formGroup]="form" (ngSubmit)="onSubmit(model)">
+        <form [formGroup]="form">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
             <button class="btn btn-dark mr-3" routerLink="..">Cancel</button>
-            <button type="submit" class="btn btn-secondary">Submit</button>
+            <button class="btn btn-secondary" (click)="onSubmit()">Submit</button>
         </form>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
