--- a/src/app/components/articles/search/search.component.html
+++ b/src/app/components/articles/search/search.component.html
@@ -17,6 +17,7 @@
             </a>
         </div>
 
+        <div class="btn btn-secondary" routerLink="{{constants.getRoutePath(router, 'home1')}}">Back To Frontpage</div>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
