--- a/src/app/components/articles/character-article-update/character-article-update.component.html
+++ b/src/app/components/articles/character-article-update/character-article-update.component.html
@@ -2,14 +2,14 @@
     <article class="mb-5">
         <!-- Heading -->
         <div *ngIf="formState===constants.updateState && model; else createState">
-            <app-edit-toggle [isInUpdateState]=true [link]="'..'"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'character', {name: model.name})"></app-edit-toggle>
 
             <h2 class="text-center">
                 Updating Character {{ model.name }}
             </h2>
         </div>
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="'/character'"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'character-overview')"></app-edit-toggle>
 
             <h2 class="text-center">
                 Creating a new character
@@ -18,7 +18,7 @@
 
 
 <!-- Form -->
-        <form [formGroup]="form" (ngSubmit)="onSubmit(model)">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
             <button class="btn btn-dark mr-3" routerLink="..">Cancel</button>
             <button type="submit" class="btn btn-secondary">Submit</button>
