--- a/src/app/components/articles/diaryentry-article-update/diaryentry-article-update.component.html
+++ b/src/app/components/articles/diaryentry-article-update/diaryentry-article-update.component.html
@@ -18,10 +18,10 @@
 
 
         <!-- Form -->
-        <form [formGroup]="form" (ngSubmit)="onSubmit(model)">
+        <form [formGroup]="form">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
             <button class="btn btn-dark mr-3" routerLink="..">Cancel</button>
-            <button type="submit" class="btn btn-secondary">Submit</button>
+            <button class="btn btn-secondary" (click)="onSubmit()">Submit</button>
         </form>
 
     </article>
