--- a/src/app/components/articles/location-article-map-create/location-article-map-create.component.html
+++ b/src/app/components/articles/location-article-map-create/location-article-map-create.component.html
@@ -1,10 +1,10 @@
 <div class="main">
     <article class="mb-5" *ngIf="markerModel && locationModel; else loading">
-        <app-edit-toggle [isInUpdateState]=true [link]="'/map/'+mapName"></app-edit-toggle>
+        <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'map', {name: mapName})"></app-edit-toggle>
         <h2 class="text-center"> Adding Location and Marker </h2>
 
         <!-- Form -->
-        <form [formGroup]="locationForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="locationForm">
             <div class="mb-5">
                 <h5 class="mb-0"> Location Fields </h5>
                 <formly-form [form]="locationForm" [fields]="location_fields" [model]="locationModel"></formly-form>    
@@ -14,7 +14,7 @@
                 <formly-form [form]="markerForm" [fields]="marker_fields" [model]="markerModel"></formly-form>
             </div>
             <button class="btn btn-dark mr-3" routerLink="..">Cancel</button>
-            <button type="submit" class="btn btn-secondary">Submit</button>
+            <button class="btn btn-secondary" (click)="onSubmit()">Submit</button>
         </form>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
