--- a/src/app/components/articles/map-update/map-update.component.html
+++ b/src/app/components/articles/map-update/map-update.component.html
@@ -4,25 +4,21 @@
         <div *ngIf="formState===constants.updateState && model; else createState">
             <app-edit-toggle [isInUpdateState]=true [link]="'..'"></app-edit-toggle>
 
-            <h2 class="text-center">
-                Updating Map {{ model.name }}
-            </h2>
+            <h2 class="text-center"> Updating Map {{ model.name }} </h2>
         </div>
         
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="'/map/Aldrune'"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'map', {name: 'Aldrune'})"></app-edit-toggle>
 
-            <h2 class="text-center">
-                Adding a new Map
-            </h2>
+            <h2 class="text-center"> Adding a new Map </h2>
         </ng-template>
 
 
         <!-- Form -->
-        <form [formGroup]="form" (ngSubmit)="onSubmit(model)">
+        <form [formGroup]="form">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
             <button class="btn btn-dark mr-3" routerLink="..">Cancel</button>
-            <button type="submit" class="btn btn-secondary">Submit</button>
+            <button class="btn btn-secondary" (click)="onSubmit()">Submit</button>
         </form>
 
     </article>
