--- a/src/app/components/articles/map/map.component.html
+++ b/src/app/components/articles/map/map.component.html
@@ -4,11 +4,11 @@
         <app-edit-toggle></app-edit-toggle>
         <h3 class="text-center mb-5 icon-container">
             Map of
-            <form class="d-inline" (ngSubmit)="routeToMap(mapChoice.value)">
+            <form class="d-inline">
                 <select name="map" id="map" class="mx-2" #mapChoice>
                     <option *ngFor="let map of maps" value="{{map.name}}">{{map.name}}</option>
                 </select> 
-                <button type="submit" class="btn btn-sm btn-outline-info">Go to Map</button>
+                <button class="btn btn-sm btn-outline-info" (click)="routeToMap(mapChoice.value)">Go to Map</button>
             </form>
 
             <i class="fa fa-plus icon ml-2" routerLink="{{constants.wikiUrlFrontendPrefix}}/map/create"></i>
@@ -19,7 +19,7 @@
             <app-leaflet-map [map]="currentMap"></app-leaflet-map>
         </div>
 
-        <button class="btn btn-dark mr-3" routerLink="{{constants.wikiUrlFrontendPrefix}}">Back To Frontpage</button>
+        <button class="btn btn-dark mr-3" routerLink="{{constants.getRoutePath(router, 'home1')}}">Back To Frontpage</button>
         <app-delete-toggle (deleteEvent)="deleteMap()"></app-delete-toggle>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
