--- a/src/app/components/articles/session-audio-update/session-audio-update.component.html
+++ b/src/app/components/articles/session-audio-update/session-audio-update.component.html
@@ -10,7 +10,7 @@
         </div>
 
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="'/sessionaudio'"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'sessionaudio-overview')"></app-edit-toggle>
 
             <h2 class="text-center">
                 Uploading Session Audio File
@@ -19,10 +19,10 @@
 
 
         <!-- Form -->
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <form [formGroup]="form">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
             <button class="btn btn-dark mr-3" routerLink="..">Cancel</button>
-            <button type="submit" class="btn btn-outline-dark">Submit</button>
+            <button class="btn btn-outline-dark" (click)="onSubmit()">Submit</button>
         </form>
     </article>
 
