Fixed broken link and select field in marker-update

--- a/src/app/components/articles/marker-update/marker-update.component.html
+++ b/src/app/components/articles/marker-update/marker-update.component.html
@@ -1,14 +1,14 @@
 <div class="main">
-    <article class="mb-5" *ngIf="markerLocation; else loading">
+    <article class="mb-5" *ngIf="model; else loading">
         <!-- Heading -->
-        <div *ngIf="formState===constants.updateState && model; else createState">
+        <div *ngIf="formState===constants.updateState; else createState">
             <app-edit-toggle [isInUpdateState]=true [link]="'..'"></app-edit-toggle>
 
             <h2 class="text-center"> Updating Marker for {{model.location_details.name}} on {{model.map_details.name}} </h2>
         </div>
 
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'location', {parent_name: markerLocation.parent_location_details.name, name: markerLocation.name})"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'location', {parent_name: model.location_details.parent_location_name, name: model.location_details.name})"></app-edit-toggle>
 
             <h2 class="text-center"> Adding a new Marker </h2>
         </ng-template>
