--- a/src/app/components/articles/marker-map-create/marker-map-create.component.html
+++ b/src/app/components/articles/marker-map-create/marker-map-create.component.html
@@ -4,11 +4,13 @@
         <h2 class="text-center"> Adding a new Marker </h2>
 
         <!-- Form -->
-        <form [formGroup]="form">
-            <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
-            <button class="btn btn-dark mr-3" routerLink="..">Cancel</button>
-            <button class="btn btn-secondary" (click)="onSubmit()">Submit</button>
-        </form>
+        <app-formly-formcontainer 
+        [model]="model" 
+        [fields]="fields" 
+        (submit)="onSubmit()" 
+        (cancel)="onCancel()"
+        ></app-formly-formcontainer>
+
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
