--- a/src/app/components/utility/formly-formcontainer/formly-formcontainer.component.html
+++ b/src/app/components/utility/formly-formcontainer/formly-formcontainer.component.html
@@ -1,5 +1,5 @@
 <!-- Form -->
-<form [formGroup]="form">
+<form [formGroup]="form" enctype="{{enctype}}">
     <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
     <div class="btn btn-dark mr-3" (click)="onCancel()">Cancel</div>
     <div class="btn btn-secondary" (click)="onSubmit()">Submit</div>
